Testing Darkmode do not merge for now

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,29 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
+		<script>
+			//create local storage variable called theme
+			var theme = localStorage.getItem('theme');
+			localStorage.setItem('theme', theme || 'light');
+			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+			if (
+				localStorage.theme === 'dark' ||
+				(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+			) {
+				document.documentElement.classList.add('dark');
+			} else {
+				document.documentElement.classList.remove('dark');
+			}
+
+			// Whenever the user explicitly chooses light mode
+			localStorage.theme = 'light';
+
+			// Whenever the user explicitly chooses dark mode
+			localStorage.theme = 'dark';
+
+			// Whenever the user explicitly chooses to respect the OS preference
+			//localStorage.removeItem('theme');
+		</script>
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
