--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="/css/flexcore.css" />
 		<link rel="stylesheet" href="../src/tailwind.css" />
 		%svelte.head%
 	</head>
