Add Poppins font

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/css/flexcore.css" />
 		<link rel="stylesheet" href="../src/tailwind.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 		%svelte.head%
 	</head>
 	<body>
